--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,23 @@
     <string name="StaggeredViewVertical">StaggeredViewVertical</string>
     <string name="LinearViewVertical">LinearView Vertical </string>
 
+    <string-array name="nav_drawer_labels">
+        <item>Birds</item>
+        <item>Animal</item>
+        <item>Forest</item>
+        <item>Ocean</item>
+        <item>Planets</item>
+        <item>Landscape</item>
+    </string-array>
+
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+
+    <string name="delete">Delete</string>
+    <string name="search">Search</string>
+    <string name="settings">Settings</string>
+    <string name="edit">Edit</string>
+    <string name="exit">Exit</string>
+
+
 </resources>
